--- a/commons/src/main/res/values-ta/strings.xml
+++ b/commons/src/main/res/values-ta/strings.xml
@@ -1,116 +1,116 @@
 <resources>
-    <string name="ok">OK</string>
-    <string name="cancel">Cancel</string>
-    <string name="save_as">Save as</string>
-    <string name="file_saved">File saved successfully</string>
-    <string name="invalid_file_format">Invalid file format</string>
-    <string name="out_of_memory_error">Out of memory error</string>
-    <string name="an_error_occurred">An error occurred: %s</string>
-    <string name="open_with">Open with</string>
-    <string name="edit_with">Edit with</string>
-    <string name="no_app_found">No valid app found</string>
-    <string name="set_as">Set as</string>
-    <string name="copy_to_clipboard">Copy to clipboard</string>
-    <string name="copy_number_to_clipboard">Copy number to clipboard</string>
-    <string name="value_copied_to_clipboard">Value copied to clipboard</string>
-    <string name="dial_number">Dial number</string>
-    <string name="unknown">Unknown</string>
-    <string name="always">Always</string>
-    <string name="never">Never</string>
-    <string name="details">Details</string>
-    <string name="notes">Notes</string>
-    <string name="deleting_folder">Deleting folder \'%s\'</string>
-    <string name="none">None</string>
-    <string name="label">Label</string>
-    <string name="transparent">Transparent</string>
-    <string name="transparent_color">Transparent color</string>
-    <string name="select_a_different_color">Select a different color</string>
-    <string name="download">Download</string>
-    <string name="notification">Notification</string>
-    <string name="email">Email</string>
-    <string name="previous">Previous</string>
-    <string name="playpause">Play / Pause</string>
-    <string name="next">Next</string>
-    <string name="number">Number</string>
-    <string name="no_contacts_found">No contacts found</string>
-    <string name="request_the_required_permissions">Request the required permissions</string>
-    <string name="no_access_to_contacts">The app could not access your contacts</string>
-    <string name="insert_text_here">Insert text here</string>
+    <string name="ok">சரி</string>
+    <string name="cancel">ரத்துசெய்</string>
+    <string name="save_as">என சேமிக்கவும்</string>
+    <string name="file_saved">கோப்பு வெற்றிகரமாக சேமிக்கப்பட்டது</string>
+    <string name="invalid_file_format">தவறான கோப்பு வடிவம்</string>
+    <string name="out_of_memory_error">நினைவக பிழை இல்லை</string>
+    <string name="an_error_occurred">பிழை ஏற்பட்டது: %s</string>
+    <string name="open_with">உடன் திறக்கவும்</string>
+    <string name="edit_with">உடன் திருத்தவும்</string>
+    <string name="no_app_found">சரியான செயலி எதுவும் கிடைக்கவில்லை</string>
+    <string name="set_as">அமை</string>
+    <string name="copy_to_clipboard">கிளிப்போர்டுக்கு நகலெடுக்கவும்</string>
+    <string name="copy_number_to_clipboard">கிளிப்போர்டுக்கு எண்ணை நகலெடுக்கவும்</string>
+    <string name="value_copied_to_clipboard">மதிப்பு கிளிப்போர்டுக்கு நகலெடுக்கப்பட்டது</string>
+    <string name="dial_number">டயல் எண்</string>
+    <string name="unknown">தெரியவில்லை</string>
+    <string name="always">எப்போதும்</string>
+    <string name="never">ஒருபோதும்</string>
+    <string name="details">விவரங்கள்</string>
+    <string name="notes">குறிப்புகள்</string>
+    <string name="deleting_folder"> \'%s\' கோப்புறையை நீக்குகிறது</string>
+    <string name="none">எதுவுமில்லை</string>
+    <string name="label">லேபிள்</string>
+    <string name="transparent">ஒளி புகும்</string>
+    <string name="transparent_color">ஒளி புகும் நிறம்</string>
+    <string name="select_a_different_color">வேறு நிறத்தைத் தேர்ந்தெடுக்கவும்</string>
+    <string name="download">பதிவிறக்கு</string>
+    <string name="notification">அறிவிப்பு</string>
+    <string name="email">மின்னஞ்சல்</string>
+    <string name="previous">முந்தைய</string>
+    <string name="playpause">இயக்கு / இடைநிறுத்து</string>
+    <string name="next">அடுத்தது</string>
+    <string name="number">எண்</string>
+    <string name="no_contacts_found">தொடர்புகள் எதுவும் கிடைக்கவில்லை</string>
+    <string name="request_the_required_permissions">தேவையான அனுமதிகளைக் கோருங்கள்</string>
+    <string name="no_access_to_contacts">செயலியால் உங்கள் தொடர்புகளை அணுக முடியவில்லை</string>
+    <string name="insert_text_here">உரையை இங்கே சேர்க்கவும்</string>
 
     <!-- View types -->
-    <string name="change_view_type">Change view type</string>
-    <string name="grid">Grid</string>
-    <string name="list">List</string>
-    <string name="increase_column_count">Increase column count</string>
-    <string name="reduce_column_count">Reduce column count</string>
-    <string name="change_cover_image">Change cover image</string>
-    <string name="select_photo">Select photo</string>
+    <string name="change_view_type">பார்வை வகையை மாற்றவும்</string>
+    <string name="grid">கட்டம்</string>
+    <string name="list">பட்டியல்</string>
+    <string name="increase_column_count">நெடுவரிசை எண்ணிக்கையை அதிகரி</string>
+    <string name="reduce_column_count">நெடுவரிசை எண்ணிக்கையைக் குறை</string>
+    <string name="change_cover_image">அட்டைப் படத்தை மாற்றவும்</string>
+    <string name="select_photo">புகைப்படத்தைத் தேர்ந்தெடு</string>
 
     <!-- Blocked numbers -->
-    <string name="manage_blocked_numbers">Manage blocked numbers</string>
-    <string name="not_blocking_anyone">You are not blocking anyone.</string>
-    <string name="add_a_blocked_number">Add a blocked number</string>
-    <string name="block_number">Block number</string>
-    <string name="block_numbers">Block numbers</string>
-    <string name="blocked_numbers">Blocked numbers</string>
-    <string name="must_make_default_dialer">You have to make this app the default dialer app to make use of blocked numbers.</string>
-    <string name="set_as_default">Set as default</string>
-    <string name="block_confirmation">Are you sure you want to block \"%s\"?</string>
+    <string name="manage_blocked_numbers">தடுக்கப்பட்ட எண்களை நிர்வகி</string>
+    <string name="not_blocking_anyone">நீங்கள் யாரையும் தடுக்கவில்லை.</string>
+    <string name="add_a_blocked_number">தடுக்கப்பட்ட எண்ணைச் சேர்க்கவும்</string>
+    <string name="block_number">எண்ணைத் தடு</string>
+    <string name="block_numbers">எண்களைத் தடு</string>
+    <string name="blocked_numbers">தடுக்கப்பட்ட எண்கள்</string>
+    <string name="must_make_default_dialer">தடுக்கப்பட்ட எண்களைப் பயன்படுத்த இந்த பயன்பாட்டை இயல்புநிலை டயலர் பயன்பாடாக மாற்ற வேண்டும்.</string>
+    <string name="set_as_default">இயல்புநிலைக்கு அமை</string>
+    <string name="block_confirmation">\"%s\" ஐத் தடுக்க விரும்புகிறீர்களா?</string>
 
     <!-- Favorites -->
-    <string name="favorites">Favorites</string>
-    <string name="add_favorites">Add favorites</string>
-    <string name="add_to_favorites">Add to favorites</string>
-    <string name="remove_from_favorites">Remove from favorites</string>
+    <string name="favorites">பிடித்தவை</string>
+    <string name="add_favorites">பிடித்தவற்றைச் சேர்</string>
+    <string name="add_to_favorites">பிடித்தவையில் சேர்</string>
+    <string name="remove_from_favorites">பிடித்தவையிலிருந்து அகற்று</string>
 
     <!-- Search -->
-    <string name="search">Search</string>
-    <string name="type_2_characters">Type in at least 2 characters to start the search.</string>
+    <string name="search">தேடல்</string>
+    <string name="type_2_characters">தேடலைத் தொடங்க குறைந்தது 2 எழுத்துக்களைத் தட்டச்சு செய்க.</string>
 
     <!-- Filters -->
-    <string name="filter">Filter</string>
-    <string name="no_items_found">No items found.</string>
-    <string name="change_filter">Change filter</string>
+    <string name="filter">வடிகட்டி</string>
+    <string name="no_items_found">உருப்படிகள் எதுவும் கிடைக்கவில்லை.</string>
+    <string name="change_filter">வடிப்பானை மாற்றவும்</string>
 
     <!-- Permissions -->
-    <string name="no_storage_permissions">Storage permission is required</string>
-    <string name="no_contacts_permission">Contacts permission is required</string>
-    <string name="no_camera_permissions">Camera permission is required</string>
-    <string name="no_audio_permissions">Audio permission is required</string>
+    <string name="no_storage_permissions">சேமிப்பு அனுமதி தேவை</string>
+    <string name="no_contacts_permission">தொடர்புகளின் அனுமதி தேவை</string>
+    <string name="no_camera_permissions">கேமரா அனுமதி தேவை</string>
+    <string name="no_audio_permissions">ஆடியோ அனுமதி தேவை</string>
 
     <!-- Renaming -->
-    <string name="rename_file">Rename file</string>
-    <string name="rename_folder">Rename folder</string>
-    <string name="rename_file_error">Could not rename the file</string>
-    <string name="rename_folder_error">Could not rename the folder</string>
-    <string name="rename_folder_empty">Folder name must not be empty</string>
-    <string name="rename_folder_exists">A folder with that name already exists</string>
-    <string name="rename_folder_root">Cannot rename the root folder of a storage</string>
-    <string name="rename_folder_ok">Folder renamed successfully</string>
-    <string name="renaming_folder">Renaming folder</string>
-    <string name="filename_cannot_be_empty">Filename cannot be empty</string>
-    <string name="filename_invalid_characters">Filename contains invalid characters</string>
-    <string name="filename_invalid_characters_placeholder">Filename \'%s\' contains invalid characters</string>
-    <string name="extension_cannot_be_empty">Extension cannot be empty</string>
-    <string name="source_file_doesnt_exist">Source file %s doesn\'t exist</string>
-    <string name="prepend_filenames">Prepend filenames</string>
-    <string name="append_filenames">Append filenames</string>
-    <string name="simple_renaming">Simple renaming</string>
-    <string name="pattern_renaming">Pattern</string>
-    <string name="string_to_add">String to add</string>
-    <string name="rename_date_time_pattern">%Y - year\n%M - month\n%D - day\n%h - hour\n%m - minute\n%s - second\n%i - number increasing from 1</string>
+    <string name="rename_file">கோப்பை மறுபெயரிடு</string>
+    <string name="rename_folder">கோப்புறையை மறுபெயரிடு</string>
+    <string name="rename_file_error">கோப்பின் மறுபெயரிட முடியவில்லை</string>
+    <string name="rename_folder_error">கோப்புறையின் மறுபெயரிட முடியவில்லை</string>
+    <string name="rename_folder_empty">கோப்புறையின் பெயர் காலியாக இருக்கக்கூடாது</string>
+    <string name="rename_folder_exists">அந்த பெயருடன் ஒரு கோப்புறை ஏற்கனவே உள்ளது</string>
+    <string name="rename_folder_root">சேமிப்பகத்தின் ரூட் கோப்புறையை மறுபெயரிட முடியாது</string>
+    <string name="rename_folder_ok">கோப்புறை வெற்றிகரமாக மறுபெயரிடப்பட்டது</string>
+    <string name="renaming_folder">கோப்புறையை மறுபெயரிடுகிறது</string>
+    <string name="filename_cannot_be_empty">கோப்பு பெயர் காலியாக இருக்க முடியாது</string>
+    <string name="filename_invalid_characters">கோப்பு பெயரில் தவறான எழுத்துக்கள் உள்ளன</string>
+    <string name="filename_invalid_characters_placeholder">கோப்பு பெயர் \'%s\' தவறான எழுத்துக்களைக் கொண்டுள்ளது</string>
+    <string name="extension_cannot_be_empty">நீட்டிப்பு காலியாக இருக்க முடியாது</string>
+    <string name="source_file_doesnt_exist">மூல கோப்பு %s இல்லை</string>
+    <string name="prepend_filenames">கோப்பு பெயர்களைத் முன்சேர்க்கவும்</string>
+    <string name="append_filenames">கோப்பு பெயர்களைச் பின்சேர்க்கவும்</string>
+    <string name="simple_renaming">எளிய மறுபெயரிடுதல்</string>
+    <string name="pattern_renaming">முறை</string>
+    <string name="string_to_add">சேர்க்க வேண்டிய சரம்</string>
+    <string name="rename_date_time_pattern">%Y - ஆண்டு\n%M - மாதம்\n%D - நாள்\n%h - மணி\n%m - நிமிடம்\n%s - விநாடிகள்\n%i - 1 இலிருந்து அதிகரிக்கும் எண்</string>
 
     <!-- Copy / Move -->
-    <string name="copy">Copy</string>
-    <string name="move">Move</string>
-    <string name="copy_move">Copy / Move</string>
-    <string name="copy_to">Copy to</string>
-    <string name="move_to">Move to</string>
-    <string name="source">Source</string>
-    <string name="destination">Destination</string>
-    <string name="select_destination">Select destination</string>
-    <string name="click_select_destination">Click here to select destination</string>
-    <string name="invalid_destination">Could not write to the selected destination</string>
+    <string name="copy">நகலெடுக்கவும்</string>
+    <string name="move">நகர்வு</string>
+    <string name="copy_move">நகலெடு / நகர்த்து</string>
+    <string name="copy_to">நகலெடுக்க வேண்டிய இடம்</string>
+    <string name="move_to">நகர்த்த வேண்டிய இடம்</string>
+    <string name="source">மூலம்</string>
+    <string name="destination">இலக்கு</string>
+    <string name="select_destination">இலக்கைத் தேர்ந்தெடு</string>
+    <string name="click_select_destination">இலக்கைத் தேர்ந்தெடுக்க இங்கே அழுத்து</string>
+    <string name="invalid_destination">தேர்ந்தெடுக்கப்பட்ட இலக்குக்கு எழுத முடியவில்லை</string>
     <string name="please_select_destination">Please select a destination</string>
     <string name="source_and_destination_same">Source and destination cannot be the same</string>
     <string name="copy_failed">Could not copy the files</string>
