adding Improved design as an argument for upgrading to the Pro version

--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -773,6 +773,7 @@
     <string name="why_upgrade_no_ads">Sense anuncis</string>
     <string name="why_upgrade_no_internet_access">No hi ha accés a Internet</string>
     <string name="why_upgrade_footer">+ 100% de garantia de devolució</string>
+    <string name="why_upgrade_improved_design">Improved design</string>
 
     <!-- Gallery Pro -->
     <string name="why_upgrade_advanced_photo_editor">Editor de fotos avançat</string>
