--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -774,6 +774,7 @@
     <string name="why_upgrade_no_ads">Keine Anzeigen</string>
     <string name="why_upgrade_no_internet_access">Kein Internetzugang</string>
     <string name="why_upgrade_footer">+ 100% Geld-zurück-Garantie</string>
+    <string name="why_upgrade_improved_design">Improved design</string>
 
     <!-- Gallery Pro -->
     <string name="why_upgrade_advanced_photo_editor">Fortgeschrittener Fotoeditor</string>
