--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -773,6 +773,7 @@
     <string name="why_upgrade_no_ads">Χωρίς διαφ/σεις</string>
     <string name="why_upgrade_no_internet_access">Χωρίς πρόσβαση στο internet</string>
     <string name="why_upgrade_footer">+ 100% Εγγύηση επιστροφής χρημάτων</string>
+    <string name="why_upgrade_improved_design">Improved design</string>
 
     <!-- Gallery Pro -->
     <string name="why_upgrade_advanced_photo_editor">Προηγμένος επεξεργαστής φωτογραφιών</string>
