--- a/commons/src/main/res/values-gl/strings.xml
+++ b/commons/src/main/res/values-gl/strings.xml
@@ -771,6 +771,7 @@
     <string name="why_upgrade_no_ads">Non hai anuncios</string>
     <string name="why_upgrade_no_internet_access">No acceso a Internet</string>
     <string name="why_upgrade_footer">Garantido ao 100% os teus cartos de volta</string>
+    <string name="why_upgrade_improved_design">Improved design</string>
 
     <!-- Gallery Pro -->
     <string name="why_upgrade_advanced_photo_editor"> Editor de fotos avanzado</string>
