--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -773,6 +773,7 @@
     <string name="why_upgrade_no_ads">No pubblicità</string>
     <string name="why_upgrade_no_internet_access">No accesso a Internet</string>
     <string name="why_upgrade_footer">+ 100% garanzia soddisfatti o rimborsati</string>
+    <string name="why_upgrade_improved_design">Improved design</string>
 
     <!-- Gallery Pro -->
     <string name="why_upgrade_advanced_photo_editor">Editor fotografico avanzato</string>
