--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -736,6 +736,7 @@
     <string name="why_upgrade_no_ads">広告なし</string>
     <string name="why_upgrade_no_internet_access">インターネットにアクセス不要</string>
     <string name="why_upgrade_footer">+ 100％返金保証</string>
+    <string name="why_upgrade_improved_design">Improved design</string>
 
     <!-- Gallery Pro -->
     <string name="why_upgrade_advanced_photo_editor">上級な写真編集</string>
