--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -807,6 +807,7 @@
     <string name="why_upgrade_no_ads">Žiadne reklamy</string>
     <string name="why_upgrade_no_internet_access">Žiadny prístup na internet</string>
     <string name="why_upgrade_footer">+ 100% Garancia vrátenia peňazí</string>
+    <string name="why_upgrade_improved_design">Vylepšený dizajn</string>
 
     <!-- Gallery Pro -->
     <string name="why_upgrade_advanced_photo_editor">Pokročilý editor fotiek</string>
