--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -770,6 +770,7 @@
     <string name="why_upgrade_no_ads">Reklamsız</string>
     <string name="why_upgrade_no_internet_access">İnternet erişimi yok</string>
     <string name="why_upgrade_footer">+ %100 Para İadesi Garantisi</string>
+    <string name="why_upgrade_improved_design">Improved design</string>
 
     <!-- Gallery Pro -->
     <string name="why_upgrade_advanced_photo_editor">Gelişmiş fotoğraf düzenleyici</string>
