--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -770,6 +770,7 @@
     <string name="why_upgrade_no_ads">Ei mainoksia</string>
     <string name="why_upgrade_no_internet_access">Ei internetyhteyttä</string>
     <string name="why_upgrade_footer">+ 100% rahat takaisin-takuu</string>
+    <string name="why_upgrade_improved_design">Improved design</string>
 
     <!-- Gallery Pro -->
     <string name="why_upgrade_advanced_photo_editor">Kehittyt valokuvaeditori</string>
