--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -774,6 +774,7 @@
     <string name="why_upgrade_no_ads">Pas de publicité</string>
     <string name="why_upgrade_no_internet_access">Pas d`accès à l`internet</string>
     <string name="why_upgrade_footer">+ 100% Garantie de remboursement</string>
+    <string name="why_upgrade_improved_design">Improved design</string>
 
     <!-- Gallery Pro -->
     <string name="why_upgrade_advanced_photo_editor">Éditeur de photos avancé</string>
