--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -792,6 +792,7 @@
     <string name="why_upgrade_duplicate_contact_merging">Fusión de contactos duplicados mejorada</string>
     <string name="why_upgrade_font_size_customization">Personalización del tamaño de fuente</string>
     <string name="why_upgrade_private_contact_sharing">Uso compartido opcional de contactos privados dentro de nuestras aplicaciones</string>
+    <string name="why_upgrade_customizable_contact_ringtones">Customizable contact ringtones</string>
 
     <!-- Notes Pro -->
     <string name="why_upgrade_checklists">Listas de verificación</string>
