--- a/commons/src/main/res/values-gl/strings.xml
+++ b/commons/src/main/res/values-gl/strings.xml
@@ -790,6 +790,7 @@
     <string name="why_upgrade_duplicate_contact_merging">Mellorando a combinación de contactos duplicados</string>
     <string name="why_upgrade_font_size_customization">Personalización do tamaño da letra</string>
     <string name="why_upgrade_private_contact_sharing">Contacto privado opcional nos aplicativos</string>
+    <string name="why_upgrade_customizable_contact_ringtones">Customizable contact ringtones</string>
 
     <!-- Notes Pro -->
     <string name="why_upgrade_checklists">Listas de verificación</string>
