--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -792,6 +792,7 @@
     <string name="why_upgrade_duplicate_contact_merging">Fusione di contatti duplicati migliorata</string>
     <string name="why_upgrade_font_size_customization">Personalizzazione della dimensione dei caratteri</string>
     <string name="why_upgrade_private_contact_sharing">Condivisione opzionale dei contatti privati tra le nostre applicazioni</string>
+    <string name="why_upgrade_customizable_contact_ringtones">Customizable contact ringtones</string>
 
     <!-- Notes Pro -->
     <string name="why_upgrade_checklists">Liste di controllo</string>
