--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -755,6 +755,7 @@
     <string name="why_upgrade_duplicate_contact_merging">重複した連絡先登録を改善</string>
     <string name="why_upgrade_font_size_customization">文字サイズのカスタマイズ</string>
     <string name="why_upgrade_private_contact_sharing">アプリ内で個別連絡先をシェアするオプション</string>
+    <string name="why_upgrade_customizable_contact_ringtones">Customizable contact ringtones</string>
 
     <!-- Notes Pro -->
     <string name="why_upgrade_checklists">チェックリスト</string>
