--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -826,6 +826,7 @@
     <string name="why_upgrade_duplicate_contact_merging">Pokročilé spájanie duplicitných kontaktov</string>
     <string name="why_upgrade_font_size_customization">Nastaviteľná veľkosť písma</string>
     <string name="why_upgrade_private_contact_sharing">Voliteľné zdieľanie súkromných kontaktov vrámci našich apiek</string>
+    <string name="why_upgrade_customizable_contact_ringtones">Vlastné zvonenie kontaktov</string>
 
     <!-- Notes Pro -->
     <string name="why_upgrade_checklists">Zoznamy položiek</string>
