--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -792,6 +792,7 @@
     <string name="why_upgrade_duplicate_contact_merging">Удосконалена функція злиття контактів</string>
     <string name="why_upgrade_font_size_customization">Налаштування розміру шрифту</string>
     <string name="why_upgrade_private_contact_sharing">Додатковий обмін конфіденційними контактами в наших</string>
+    <string name="why_upgrade_customizable_contact_ringtones">Customizable contact ringtones</string>
 
     <!-- Notes Pro -->
     <string name="why_upgrade_checklists">Контрольні списки</string>
