--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -793,6 +793,7 @@
     <string name="why_upgrade_duplicate_contact_merging">Fusion améliorée des contacts en double</string>
     <string name="why_upgrade_font_size_customization">Personnalisation de la taille des polices</string>
     <string name="why_upgrade_private_contact_sharing">Partage facultatif de contacts privés parmi nos applications</string>
+    <string name="why_upgrade_customizable_contact_ringtones">Customizable contact ringtones</string>
 
     <!-- Notes Pro -->
     <string name="why_upgrade_checklists">Listes de contrôle</string>
