--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -792,6 +792,7 @@
     <string name="why_upgrade_duplicate_contact_merging">Junção de contatos duplicados melhorada</string>
     <string name="why_upgrade_font_size_customization">Personalização do tamanho da letra</string>
     <string name="why_upgrade_private_contact_sharing">Compartilhamento entre contatos opcional dentro de nossos apps</string>
+    <string name="why_upgrade_customizable_contact_ringtones">Customizable contact ringtones</string>
 
     <!-- Notes Pro -->
     <string name="why_upgrade_checklists">Listas</string>
