--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -827,6 +827,7 @@
     <string name="why_upgrade_duplicate_contact_merging">Улучшенная функция слияния контактов</string>
     <string name="why_upgrade_font_size_customization">Настройка размера шрифта</string>
     <string name="why_upgrade_private_contact_sharing">Дополнительный обмен конфиденциальными контактами в наших приложениях</string>
+    <string name="why_upgrade_customizable_contact_ringtones">Customizable contact ringtones</string>
 
     <!-- Notes Pro -->
     <string name="why_upgrade_checklists">Контрольные списки</string>
