--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -791,7 +791,7 @@
     <string name="why_upgrade_duplicate_contact_merging">Verbeterd samenvoegen van dubbele contacten</string>
     <string name="why_upgrade_font_size_customization">Lettergroottes aanpassen</string>
     <string name="why_upgrade_private_contact_sharing">Privécontacten alleen binnen onze apps delen (optioneel)</string>
-    <string name="why_upgrade_customizable_contact_ringtones">Customizable contact ringtones</string>
+    <string name="why_upgrade_customizable_contact_ringtones">Ringtones per contact instellen</string>
 
     <!-- Notes Pro -->
     <string name="why_upgrade_checklists">Checklists</string>
