--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -792,7 +792,7 @@
     <string name="why_upgrade_duplicate_contact_merging">Βελτιωμένη συγχώνευση διπλών επαφών</string>
     <string name="why_upgrade_font_size_customization">Προσαρμογή μεγέθους γραμ/σειράς</string>
     <string name="why_upgrade_private_contact_sharing">Προαιρετική κοινή χρήση ιδιωτικών επαφών στις εφαρμογές μας</string>
-    <string name="why_upgrade_customizable_contact_ringtones">Customizable contact ringtones</string>
+    <string name="why_upgrade_customizable_contact_ringtones">Προσαρμόσιμοι ήχοι κλήσης επαφών</string>
 
     <!-- Notes Pro -->
     <string name="why_upgrade_checklists">Λίστες ελέγχου</string>
