--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -792,7 +792,7 @@
     <string name="why_upgrade_duplicate_contact_merging">S\'ha millorat la combinació de contactes duplicats</string>
     <string name="why_upgrade_font_size_customization">Personalització de la mida del tipus de lletra</string>
     <string name="why_upgrade_private_contact_sharing">Compartir contactes privats opcionals a les nostres aplicacions</string>
-    <string name="why_upgrade_customizable_contact_ringtones">Customizable contact ringtones</string>
+    <string name="why_upgrade_customizable_contact_ringtones">Tons de contacte personalitzables</string>
 
     <!-- Notes Pro -->
     <string name="why_upgrade_checklists">Llistes de comprovació</string>
