--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -10,10 +10,10 @@
     <string name="edit_with">Upravit s</string>
     <string name="no_app_found">Nenalezena žádná vhodná aplikace</string>
     <string name="set_as">Nastavit jako</string>
-    <string name="copy_to_clipboard">Copy to clipboard</string>
-    <string name="copy_number_to_clipboard">Copy number to clipboard</string>
+    <string name="copy_to_clipboard">Zkopírovat do schránky</string>
+    <string name="copy_number_to_clipboard">Zkopírovat číslo do schránky</string>
     <string name="value_copied_to_clipboard">Hodnota byla vložena do schránky</string>
-    <string name="dial_number">Dial number</string>
+    <string name="dial_number">Vytočit číslo</string>
     <string name="unknown">Neznámý</string>
     <string name="always">Vždy</string>
     <string name="never">Nikdy</string>
@@ -34,8 +34,8 @@
     <string name="number">Číslo</string>
     <string name="no_contacts_found">Nenalezeny žádné kontakty.</string>
     <string name="request_the_required_permissions">Vyžádat potřebná oprávnění</string>
-    <string name="no_access_to_contacts">The app could not access your contacts</string>
-    <string name="insert_text_here">Insert text here</string>
+    <string name="no_access_to_contacts">Aplikace nemohla získat přístup k vašim kontaktům</string>
+    <string name="insert_text_here">Sem vložte text</string>
 
     <!-- View types -->
     <string name="change_view_type">Změnit typ zobrazení</string>
@@ -55,7 +55,7 @@
     <string name="blocked_numbers">Blokovaná čísla</string>
     <string name="must_make_default_dialer">Pro použití blokování čísel musíte nastavit aplikaci jako výchozí pro správu hovorů.</string>
     <string name="set_as_default">Nastavit jako výchozí</string>
-    <string name="block_confirmation">Ste si istý, že chcete zablokovat \"%s\"?</string>
+    <string name="block_confirmation">Jste si jistý, že chcete zablokovat \"%s\"?</string>
 
     <!-- Favorites -->
     <string name="favorites">Oblíbené</string>
@@ -280,8 +280,8 @@
     <string name="create_shortcut">Vytvořit zkratku</string>
     <string name="add_number_to_contact">Add number to contact</string>
     <string name="view_contact_details">View contact details</string>
-    <string name="call_from_sim_1">Call from SIM 1</string>
-    <string name="call_from_sim_2">Call from SIM 2</string>
+    <string name="call_from_sim_1">Volání ze SIM 1</string>
+    <string name="call_from_sim_2">Volání ze SIM 2</string>
     <string name="toggle_filename">Přepnout viditelnost názvů souborů</string>
 
     <!-- Sorting -->
@@ -303,8 +303,8 @@
     <string name="middle_name">Prostřední jméno</string>
     <string name="surname">Příjmení</string>
     <string name="full_name">Celé jméno</string>
-    <string name="use_custom_sorting">Use custom sorting</string>
-    <string name="change_order">Change order</string>
+    <string name="use_custom_sorting">Použijte vlastní třídění</string>
+    <string name="change_order">Změnit pořádek</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Opravdu chcete smazat dané soubory/složky?</string>
@@ -350,7 +350,7 @@
     <string name="yesterday">Včera</string>
     <string name="today">Dnes</string>
     <string name="tomorrow">Zítra</string>
-    <string name="hide_year">Hide year</string>
+    <string name="hide_year">Skrýt rok</string>
     <string name="seconds_raw">sekundy</string>
     <string name="minutes_raw">minuty</string>
     <string name="hours_raw">hodiny</string>
@@ -520,8 +520,8 @@
     <string name="your_sounds">Vaše zvuky</string>
     <string name="add_new_sound">Přidat nový zvuk</string>
     <string name="no_sound">Žádný zvuk</string>
-    <string name="during_day_at_hh_mm">During the day at hh:mm</string>
-    <string name="during_day_at">During the day at %02d:%02d</string>
+    <string name="during_day_at_hh_mm">Během dne v hh:mm</string>
+    <string name="during_day_at">Během dne v %02d:%02d</string>
 
     <!-- Settings -->
     <string name="settings">Nastavení</string>
@@ -529,7 +529,7 @@
     <string name="customize_colors">Přizpůsobit barvy</string>
     <string name="customize_colors_locked">Přizpůsobit barvy (Uzamčeno)</string>
     <string name="customize_widget_colors">Přizpůsobit barvy widgetů</string>
-    <string name="customize_notifications">Customize notifications</string>
+    <string name="customize_notifications">Přizpůsobte oznámení</string>
     <string name="use_english_language">Použít angličtinu</string>
     <string name="show_hidden_items">Zobrazit skryté položky</string>
     <string name="font_size">Velikost písma</string>
@@ -561,7 +561,7 @@
     <string name="settings_exported_successfully">Nastavení bylo úspěšně exportováno</string>
     <string name="settings_imported_successfully">Nastavení bylo úspěšně importováno</string>
     <string name="start_name_with_surname">Nejprve příjmení</string>
-    <string name="clear_cache">Clear cache</string>
+    <string name="clear_cache">Vyčistit mezipaměť</string>
 
     <!-- Setting sections -->
     <string name="visibility">Viditelnost</string>
@@ -572,15 +572,15 @@
     <string name="saving_label">Ukládání</string>
     <string name="startup">Po spuštění</string>
     <string name="text">Text</string>
-    <string name="migrating">Migrace</string>
+    <string name="migrating">Přesunout</string>
 
     <!-- Default tabs to open -->
-    <string name="default_tab_to_open">Tab to open at app start</string>
-    <string name="contacts_tab">Contacts</string>
-    <string name="favorites_tab">Favorites</string>
-    <string name="call_history_tab">Call History</string>
-    <string name="groups_tab">Groups</string>
-    <string name="last_used_tab">Last used one</string>
+    <string name="default_tab_to_open">Kartu otevřete při spuštění aplikace</string>
+    <string name="contacts_tab">Kontakty</string>
+    <string name="favorites_tab">Oblíbenés</string>
+    <string name="call_history_tab">Historie volání</string>
+    <string name="groups_tab">Skupiny</string>
+    <string name="last_used_tab">Naposledy použité</string>
 
     <!-- Recycle Bin -->
     <string name="restore_this_file">Obnovit tento soubor</string>
@@ -752,7 +752,7 @@
     <string name="camera_short">Fotoaparát</string>
     <string name="clock_short">Hodiny</string>
     <string name="contacts_short">Kontakty</string>
-    <string name="dialer_short">Dialer</string>
+    <string name="dialer_short">Telefon</string>
     <string name="draw_short">Kreslení</string>
     <string name="file_manager_short">Správce souborů</string>
     <string name="flashlight_short">Svítilna</string>
@@ -761,7 +761,7 @@
     <string name="notes_short">Poznámky</string>
     <string name="sms_messenger_short">SMS Messenger</string>
     <string name="thank_you_short">Děkuji</string>
-    <string name="voice_recorder_short">Voice Recorder</string>
+    <string name="voice_recorder_short">Hlasový záznamník</string>
 
     <string name="sideloaded_app">
         <![CDATA[
@@ -793,12 +793,12 @@
     <string name="faq_8_text_commons">Tato verze aplikace již nebude aktualizována. Chyby, které jste možná objevili, proto nebudou nikdy opraveny. Také již nepřibudou žádné nové funkce. Pro verzi získáte za malý poplatek v Obchodě Google Play.
         Jde o jednorázovou platbu, což znamená, že po zakoupení již nebudete muset nic platit znovu. Ani při koupi nového zařízení. Pokud se vám Pro verze nebude líbit, můžete ji do pár hodin odinstalovat a peníze vám budou automaticky vráceny.
         Pokud budete chtít aplikaci vrátit kdykoliv později, stačí nám napsat na hello@simplemobiletools.com a peníze vám vrátíme.</string>
-    <string name="faq_9_title_commons">How can I select multiple items at once?</string>
-    <string name="faq_9_text_commons">There are multiple ways of doing that. The first one is starting the selection mode by long pressing one item, then short clicking on others to select them. The second way is similar to selecting items on PCs with a mouse,
-        just start the selection mode by long pressing one item, then with your finger still down drag it across other items for selecting. The third way of selecting multiple items is long pressing one item, then long pressing another one and everything in between gets selected. If you
-        want to select all items, just long press one item, then click at the selected item counter at the top left corner. That will select or unselect all everything.</string>
-    <string name="faq_10_title_commons">I have purchased the app, but I cannot download it on another device.</string>
-    <string name="faq_10_text_commons">Try clearing your Google Play app cache and restarting your device. It is some Google Play glitch, not really related to the app itself.</string>
+    <string name="faq_9_title_commons">Jak mohu vybrat více položek najednou?</string>
+    <string name="faq_9_text_commons">Existuje několik způsobů, jak toho dosáhnout. První spouští režim výběru dlouhým stisknutím jedné položky a následným krátkým kliknutím na ostatní, abyste je vybrali. Druhý způsob je podobný výběru položek na PC pomocí myši,
+        stačí spustit režim výběru dlouhým stisknutím jedné položky a potom ji prstem stále dolů přetahovat přes další položky pro výběr. Třetím způsobem výběru více položek je dlouhé stisknutí jedné položky, pak dlouhé stisknutí další a vybere se vše mezi nimi. jestli ty
+        chcete vybrat všechny položky, stačí dlouze stisknout jednu položku a poté kliknout na počítadlo vybraných položek v levém horním rohu. Tím se vybere nebo zruší výběr všeho.</string>
+    <string name="faq_10_title_commons">Koupil jsem si aplikaci, ale nemohu ji stáhnout do jiného zařízení.</string>
+    <string name="faq_10_text_commons">Zkuste vymazat mezipaměť aplikace Google Play a restartovat zařízení. Je to nějaká závada Google Play, která ve skutečnosti nesouvisí se samotnou aplikací.</string>
 
     <!-- Pro comparison (shown in the deprecated free apps) -->
     <string name="why_upgrade">Get the Pro version now!</string>
